--- a/Html.html
+++ b/Html.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <header>
-        <h1>Tienda Ecommerce</h1>
+        <h1>Tarracommerce</h1>
     </header>
     <nav>
         <a href="#">Inicio</a>
@@ -104,21 +104,21 @@
                 <img src="https://via.placeholder.com/200" alt="Producto 1">
                 <h2>Producto 1</h2>
                 <p>Descripción.</p>
-                <p>$50.00</p>
+                <p>€50.00</p>
                 <button>Añadir al carrito</button>
             </div>
             <div class="product-item">
                 <img src="https://via.placeholder.com/200" alt="Producto 2">
                 <h2>Producto 2</h2>
                 <p>Descripción.</p>
-                <p>$65.00</p>
+                <p>€65.00</p>
                 <button>Añadir al carrito</button>
             </div>
             <div class="product-item">
                 <img src="https://via.placeholder.com/200" alt="Producto 3">
                 <h2>Producto 3</h2>
                 <p>Descripción.</p>
-                <p>$80.00</p>
+                <p>€80.00</p>
                 <button>Añadir al carrito</button>
             </div>
         </div>
